// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp should match snapshoot 1`] = `
<Fragment>
  <h2>
     GifExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</Fragment>
`;

exports[`should show categories list 1`] = `
<Fragment>
  <h2>
     GifExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="One Pounch"
      key="One Pounch"
    />
    <GifGrid
      category="Goku"
      key="Goku"
    />
  </ol>
</Fragment>
`;
